ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1/input.ts.stderr
error: Expected identifier after this token
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1/input.ts:1:1
  |
1 | function =>
  | ^^^^^^^^

error: Expected (, got =>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1/input.ts:1:10
  |
1 | function =>
  |          ^^

